--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.9.4"
+    "react-image-crop": "^11.0.10",
+    "react-router-dom": "^7.9.4",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
